# oxc-bench-javascript-parser-written-in-rust

./: CLAUDE.md  Cargo.toml  README.md  memory.sh  table.mjs
benches/: parser.rs
src/: lib.rs  tsv.rs
tests/: corpus_parses.rs
