[package]
name = "bench-parser"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
name = "parser"
harness = false

[[bin]]
name = "oxc"
path = "src/oxc.rs"
test    = false
doctest = false

[[bin]]
name = "swc"
path = "src/swc.rs"
test    = false
doctest = false

# [[bin]]
# name = "biome"
# path = "src/biome.rs"
# test    = false
# doctest = false

[[bin]]
name = "tsv"
path = "src/tsv.rs"
test    = false
doctest = false

[dependencies]
oxc = "0.137.0"

swc_ecma_parser = { version = "41.1.2", features = ["typescript"] }
swc_ecma_ast = "25.0.0"
swc_common = "23.0.2"

# biome_js_parser = "0.5.6"
# biome_js_syntax = "0.5.6"

# tsv's TypeScript parser, benched against oxc/swc on the `.ts` corpus.
# tsv has no JSX/TSX grammar, so it is excluded from `cal.com.tsx`. Path dep on a
# sibling `../tsv` checkout — required locally; tsv is benchmarked locally, not in
# CI (see CLAUDE.md "CI"). `default-features = false` drops tsv_ts's `convert`
# JSON layer (parse only). `bumpalo` is the arena `tsv_ts::parse` allocates the
# AST into, returned as the bench output to mirror oxc returning its `Allocator`.
tsv_ts = { path = "../tsv/crates/tsv_ts", default-features = false }
bumpalo = "3.20"

num_cpus = "1.16.0"
criterion2  = { version = "3.0.0", default-features = false }
rayon = "1.10.0"
mimalloc= { package = "mimalloc-safe", version = "0.1.52" }

[features]
codspeed = ["criterion2/codspeed"]

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
debug         = false
panic         = "abort"
